# speculare

./: .gitignore  LICENSE  pyproject.toml
.github/: CODEOWNERS  CODE_OF_CONDUCT.md  SECURITY.md  pull_request_template.md  renovate.json
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/scripts/: pr-template.js
.github/workflows/: lint.yml  pr-checks.yml  pr-template.yml
speculare/: __init__.py  _version.py  client.py  errors.py
speculare/core/: context.py  features.py
speculare/core/libraries/: _base.py  factory.py
speculare/core/libraries/adapters/: _disnake.py  _dpy.py  _nextcord.py  _pycord.py
speculare/features/: __init__.py  eval.py
